# boardspace.net

./: .gitignore  LICENSE  README-ABOUT-BOARDSPACE.txt  README.md
client/: .gitignore
client/boardspace strings/: Download Languages for Boardspace.launch
client/boardspace-maven/: README.txt
client/eclipse/: README.txt
client/support programs/: README.txt  makedate.bat  upload.cmd
docs/: Other things you'll need (and probably have to pay for).txt  README.txt  add language.txt  boardspace-admin.txt  boardspace-migation.txt  boardspace-newgame.txt  boardspace-newrelease.txt  boardspace-skeleton.txt  boardspace.text  configure-server.txt  database-skeleton.txt  deployment .txt  installed.txt  new-game-database-update.txt  translations.txt  upload-without-mac.txt
docs/conf/: boardspace.net.conf~  config.notes  config.notes~  httpd.conf~  vhost_boardspace.net.conf
docs/conf.d/: #vhost_boardspace.net.conf#  autoconfig.conf  iworx.conf  lets-encrypt.conf  mediawiki119.conf  ssl.conf  suphp.conf  vhost_boardspace.net.conf  vhost_boardspace.net.conf-le-ssl.conf  vhost_boardspace.net.conf~  vhost_cgos.boardspace.net.conf  vhost_git.boardspace.net.conf  vhost_rcs.boardspace.net.conf  vhost_real-me.net-le-ssl.conf  vhost_real-me.net-le-ssl.conf~  vhost_real-me.net.conf  vhost_real-me.net.conf~  vhost_tantrix.boardspace.net.conf  vhost_xtra.boardspace.net.conf
docs/sysconfig/: README  ssh.tar
server/: .bash_history  .emacs  .history  .login  .mysql_history  bl2.txt  cronlog.txt  crontab  dd  dif.map  dif.txt  files.txt  foo2.txt  info.txt  nngs_ok_time  noticeme.php  tb.txt
server/.softaculous/: sitepad.php  user.php
server/.ssh/: README.txt  config
server/HTTP/: httpd.conf  httpd.conf.rpmnew  httpd.conf~
server/MAIL/: spamfilter
server/SPAM/: .domainmailfilter  .localmailfilter  .mailfilter  .qmail-bounce  README  README~  bindroutes  mlocate.cron  new-spamfilter  new-spamfilter-ddyer  senderip  spamfilter  test1.txt  test2.txt
server/conf/: boardspace-schema.sql  boardspace.net.conf  httpd.conf  phpbb-schema.sql
server/cron/: README  backup-do-not-save  backup-to-tantrix  backupall  check-nngs.csh  checkspace.csh  contab.original  copy_mirror  copy_news  cronlog.txt  crontab.original  crontab.standard  dtest.csh  fix-httpd  foo  foo.csh  last-crontab.txt  mailme.csh  mailtest.csh  makenewdirs  move-old-archives  move-old-games  movoldgames  renew-ssl  renew-ssl-ok  renew-ssl.ok2  renew-ssl~  root-crontab.txt  savedb  savedb-temp  savedb_monthly  savedb_yearly  savegames  savegames_if_enough  showenv  ss~  test.csh  zoomers.csh
server/cserver/: BoardSpaceServer  BoardSpaceServer.conf  BoardSpaceServer.docker.conf  DOCKER.md  Dockerfile  README.txt  TestServer.conf  banner.c  error.c  httpd.conf  libs.c  libs.h  makefile  migs-declarations.h  migs-lib.c  migs-lib.h  migs.c  migs64.conf  savegame.c  security.c  sha1.c  sha1.h  threadmacros.h  websocket.c  websocket.h
server/logs/: README.txt
server/mirror/: README.txt
server/nngs/: build  build~  config.h  mlrate-1.2.tar  nngs-1.1.16.tar  nngs-1.1.17.tar  nngsconfig.h  nngsconfig.h~
server/nngs/nngs-1.1.17/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  missing.h
server/nngs/nngs-1.1.17/autom4te-2.53.cache/: output.0  requests  traces.0
server/nngs/nngs-1.1.17/autom4te.cache/: output.0  requests  traces.0  traces.1
server/nngs/nngs-1.1.17/data/: Makefile  Makefile.am  Makefile.in
server/nngs/nngs-1.1.17/data/ahelp/: Makefile  Makefile.am  Makefile.in
server/nngs/nngs-1.1.17/data/ahelp/en/: asetadmin  asetemail  nuke  sublist
server/nngs/nngs-1.1.17/data/help/: Makefile  Makefile.am  Makefile.in
server/nngs/nngs-1.1.17/data/help/ch/: 2ndlgt
server/nngs/nngs-1.1.17/data/help/en/: changes  clients  opening  oratings  register  sourcecode
server/nngs/nngs-1.1.17/data/help/fr/: all  date  overview  welcome
server/nngs/nngs-1.1.17/data/help/pl/: accept  all  busy  channel  commands  credits  ctitle  done  email  find  handles  info  last  logons  next  observe  overview  pair  pause  pending  ping  rank  rating  resign  results  set  sgf  shout  stats  teach  undo  unlock  unnotify  variables  welcome
server/nngs/nngs-1.1.17/docs/: admin.howto
server/nngs/nngs-1.1.17/memory/: Makefile
server/nngs/nngs-1.1.17/memory/.deps/: malloc.Po  salloc.Po
server/nngs/nngs-1.1.17/mlrate/src/: make.deps
server/nngs/nngs-1.1.17/nrat/: Makefile  Makefile.am  Makefile.in  command.c  command.h  command_list.h  comproc.c  comproc.h  gamedb.c  gamedb.h  pending.c  pending.h  playerdb.c  playerdb.h  servercodes.h
server/nngs/nngs-1.1.17/nrat/.deps/: command.Po  comproc.Po  gamedb.Po  pending.Po  playerdb.Po
server/nngs/nngs-1.1.17/src/: Makefile  Makefile.am  Makefile.in  adminproc.c  adminproc.h  alias.c  alias.h  censor.c  censor.h  channel.c  channel.h  chkaddr.c  chkaddr.h  common.h  emote.cc  emote2.c  files.h  formats.h  gameproc.c  gameproc.h  ip_ban.c  ladder.c  ladder.h  language.c  legal.c  mink.c  mink.h  multicol.c  multicol.h  network.c  network.h  nngsmain.c  nngsmain.h  nngssrv  plan.c  plan.h  utils.c  utils.h  variable.c  variable.h
server/nngs/nngs-1.1.17/src/.deps/: adminproc.Po  alias.Po  bm.Po  censor.Po  channel.Po  chkaddr.Po  emote2.Po  gameproc.Po  ip_ban.Po  ladder.Po  language.Po  legal.Po  mink.Po  multicol.Po  network.Po  nngsmain.Po  plan.Po  utils.Po  variable.Po
server/ph/: phpBB-2.0.19.tar
server/scripts/: trim  trim~
server/server/: BoardSpaceServer  BoardSpaceServer.conf  Developer.conf  README.txt  TestServer.conf  TestServer.start  TestService.start  copycert  develop.conf  dynamic.conf  static.conf  testservice.conf
server/websockify/: Cheerpj.java  README-SSL.txt  README.txt  WebSocket.html  WebSocket.java  cheerpj-gotcha.txt  cheerpj.js  cheerpj_02.js  echoserver  gameboard.html  gameboardsock.html  hive-viewer.html  login.html  pems.txt  self.pem  socktest.html  test-start  websocket-report.csh  websocket.c  websocket.h  websockify  (+3 more)
(+8629 files in other folders)
