noinst_LIBRARIES = libnrat.a

EXTRA_DIST =

INCLUDES = \
        -I$(top_srcdir)/src \
        -I$(top_srcdir)/mlrate/src

libnrat_a_SOURCES = command.c  comproc.c  gamedb.c  playerdb.c pending.c

noinst_HEADERS =

# Remove these files here... they are created locally
DISTCLEANFILES = *~ *%

@NNGS_ALL_WARNINGS@
